[gd_scene load_steps=6 format=2]

[ext_resource path="res://WinScreen.gd" type="Script" id=1]
[ext_resource path="res://deathScreen.tres" type="Theme" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/WinMessage:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/SubWinMessage:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/TimeTaken:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer/DustCleaned:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VBoxContainer/NumSweeps:percent_visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VBoxContainer/RetryText:percent_visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "returnToMenu"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/RetryText:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "SetRetryInputEnabled"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "win"
length = 6.8
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/WinMessage:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/SubWinMessage:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.1, 3.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/TimeTaken:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 4, 4.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer/DustCleaned:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 4.9, 5.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VBoxContainer/NumSweeps:percent_visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 5.8, 6.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "SetRetryInputDisabled"
} ]
}

[node name="WinScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/returnToMenu = SubResource( 3 )
anims/win = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.5
margin_top = -181.0
margin_right = 288.5
margin_bottom = 181.0

[node name="WinMessage" type="Label" parent="VBoxContainer"]
margin_right = 577.0
margin_bottom = 37.0
theme = ExtResource( 2 )
text = "The lab is free of dangerous dust!"
align = 1
percent_visible = 0.0

[node name="SubWinMessage" type="Label" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 577.0
margin_bottom = 78.0
theme = ExtResource( 2 )
text = "(shame about all that lava...)"
align = 2
percent_visible = 0.0

[node name="TimeTaken" type="Label" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 577.0
margin_bottom = 119.0
theme = ExtResource( 2 )
text = "Time - 00:00"
percent_visible = 0.0

[node name="DustCleaned" type="Label" parent="VBoxContainer"]
margin_top = 123.0
margin_right = 577.0
margin_bottom = 160.0
theme = ExtResource( 2 )
text = "Dust Removed - "
percent_visible = 0.0

[node name="NumSweeps" type="Label" parent="VBoxContainer"]
margin_top = 164.0
margin_right = 577.0
margin_bottom = 201.0
theme = ExtResource( 2 )
text = "Number of Sweeps - "
percent_visible = 0.0

[node name="RetryText" type="Label" parent="VBoxContainer"]
margin_top = 205.0
margin_right = 577.0
margin_bottom = 242.0
theme = ExtResource( 2 )
text = "Press Sweep to Return to Menu"
align = 2
percent_visible = 0.0
